--- a/k8s/backend/configserver-service.yml
+++ b/k8s/backend/configserver-service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back-svc
+  name: config-svc
 spec:
   selector:
-    resource: memory
+    type: config
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 9999
+      targetPort: 9999
