--- a/k8s/frontend/front-service.yml
+++ b/k8s/frontend/front-service.yml
@@ -4,7 +4,7 @@ metadata:
   name: front-svc
 spec:
   selector:
-    type: front
+    resource: memory
   ports:
     - protocol: TCP
       port: 80
