--- a/k8s/backend/back-deployment.yml
+++ b/k8s/backend/back-deployment.yml
@@ -18,6 +18,13 @@ spec:
       containers:
         - name: back-container
           image: kimhyeonkyun123/backk8sjenkins:1.VERSION
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 2
+            successThreshold: 3
           ports:
             - containerPort: 8080
           resources:
